force-app/main/default/objects/Replace_Product__e/Replace_Product__e.object-meta.xml
<CustomObject>
    <description>Used to start a process.</description>
    <label>Replace Product</label>
    <pluralLabel>Replace Products</pluralLabel>
</CustomObject>