force-app/main/default/objects/Replace_Product__e/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <label>Case Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>