force-app/main/default/objects/Replace_Product__e/fields/Close__c.field-meta.xml
<CustomField>
    <fullName>Close__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to close the case if the process is successful.</description>
    <label>Close</label>
    <type>Checkbox</type>
</CustomField>