force-app/main/default/objects/Replace_Product__e/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>An optional note to attach to the case.</description>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>